--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ a:active {text-decoration: none;}
 		width: 290px;
 		height: 173px;
 	}
+	.project-sidebar-elements{
+		font-size: 12px;
+		width: 100px;
+	}
 }
 
 @media (min-width: 640px){
@@ -96,6 +100,14 @@ a:active {text-decoration: none;}
 	.blog-thumb{
 		width: 500px;
 		height: 320px;
+	}
+	.project-sidebar-elements{
+		
+	}
+	/* Tab filters */
+	.project-sidebar-elements{
+		font-size: 16px;
+		width: 120px;
 	}
 }
 
@@ -122,6 +134,10 @@ a:active {text-decoration: none;}
 	.nav > li > a{
 		padding: 0;
 		margin: 15px 8px 0px;
+	}
+	/* Tab filters */
+	.project-sidebar-elements{
+		width: 120px;
 	}
 }
 
@@ -150,6 +166,10 @@ a:active {text-decoration: none;}
 	.blog-thumb{
 		width: 350px;
 		height: 224px;
+	}
+	/* Tab filters */
+	.project-sidebar-elements{
+		width: 120px;
 	}
 
 }
@@ -182,6 +202,10 @@ a:active {text-decoration: none;}
 	.blog-thumb{
 		width: 250px;
 		height: 160px;
+	}
+	/* Tab filters */
+	.project-sidebar-elements{
+		width: 120px;
 	}
 }
 
@@ -282,27 +306,26 @@ color: #4999c1;
 .project-sidebar-elements{
 	list-style-type: none;
 	display: inline-block;
-	/*margin: 0px 10px;*/
-	font-size: 16px;
+	
     background: none;    
     border-style: none;
     border-width: 2px;    
-    padding: 5px 18px;
+    padding: 5px 0px;
     font-weight: 200;
-    width: 120px;
+    
+}
+
+.project-sidebar-elements:visited{
+	box-decoration-break:
 }	
 
 /* filter menu for small screens */
 @media (max-width: 480px){
 	.project-sidebar-elements{
-		list-style-type: none;
-		display: inline-block;
-		margin: 0px 5px;
-		font-size: 12px;
 	    background: none;
 	    border-style: none;
 	    border-width: 2px;
-	    padding: 2px 9px;
+	    padding: 2px 0px;
 	   	font-weight: 200;
 	}	
 }
@@ -312,7 +335,6 @@ color: #4999c1;
 	background: white !important; 
 	color: #101010;
 	font-weight: 700;
-	/*margin: 0px 7px;*/
 }
 
 /* Will eventually add a media query*/
