--- a/style.css
+++ b/style.css
@@ -79,11 +79,11 @@ a:active {text-decoration: none;}
 	}
 
 	/* Work Expertise Area Field */
-	.work-intro-section{
-		height: 250px;
-	}
 	#expertise-areas{
 		font-size: 36px;
+	}
+	.work-intro-section{
+		height: 250px;
 	}
 
 }
@@ -122,6 +122,12 @@ a:active {text-decoration: none;}
 	.work-intro-section{
 		height: 400px;
 	}
+	#expertise-title{
+		font-size: 62px;
+	}
+	#expertise-areas{
+		font-size: 62px;
+	}
 }
 
 @media (min-width: 768px){
@@ -151,9 +157,7 @@ a:active {text-decoration: none;}
 	.project-sidebar-elements{
 		width: 120px;
 	}
-	#expertise-areas{
-		font-size: 62px;
-	}
+
 }
 
 @media (min-width: 992px){
@@ -360,7 +364,7 @@ color: #4999c1;
 
 .blog-posts{
 	float: left;
-	margin: 30px 15px;
+	margin: 30px 0px;
 	background-color: #f5f5f5;
 }
 
