--- a/style.css
+++ b/style.css
@@ -86,6 +86,13 @@ a:active {text-decoration: none;}
 		height: 250px;
 	}
 
+	/*Font size CONTACT */
+	#jumbotron-email{
+		font-size: 16px;
+		font-weight: 700;
+	}
+
+
 }
 
 @media (min-width: 640px){
@@ -106,6 +113,7 @@ a:active {text-decoration: none;}
 	.blog-posts {
 		width: 500px;
 		height: 450px;
+		margin: 30px 0px;
 	}
 	.blog-thumb{
 		width: 500px;
@@ -127,6 +135,10 @@ a:active {text-decoration: none;}
 	}
 	#expertise-areas{
 		font-size: 62px;
+	}
+	#jumbotron-email{
+		font-size: 21px;
+		font-weight: 700;
 	}
 }
 
@@ -176,10 +188,15 @@ a:active {text-decoration: none;}
 		min-height: 350px;
 		max-height: 400px;
 	}
+	.contact-intro{
+		min-height: 350px;
+		max-height: 450px;
+	}
 	/* Blog Post */
 	.blog-posts {
 		width: 350px;
 		height: 400px;
+		margin: 30px 15px;
 	}
 	.blog-thumb{
 		width: 350px;
@@ -242,7 +259,7 @@ a:active {text-decoration: none;}
 }
 
 .intro-section {
-	margin-top: 40px;
+	/*margin-top: 40px;*/
 	padding-left: 30px;
 }
 
@@ -354,7 +371,6 @@ color: #4999c1;
 	width: 100%;
 }
 
-
 /* -------------------- Blog Posts -------------------- */
 
 .blog-container{
@@ -364,7 +380,6 @@ color: #4999c1;
 
 .blog-posts{
 	float: left;
-	margin: 30px 0px;
 	background-color: #f5f5f5;
 }
 
