--- a/style.css
+++ b/style.css
@@ -624,6 +624,17 @@ color: #4999c1;
 	margin-top: 40px;
 	padding-bottom: 240px;
 }
+#about-image{
+	max-width: 100%;
+    max-height: 100%;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
+
+.about-paragraph{
+	font-weight: 300;
+    font-size: 16px;
+}
 
 
 
