Fixed the top margin for work hero text

--- a/style.css
+++ b/style.css
@@ -389,6 +389,10 @@ color: #4999c1;
 	width: 100%;
 }
 
+.work-intro-section{
+	margin-top 50px;
+}
+
 /* -------------------- Blog Posts -------------------- */
 
 .blog-container{
