--- a/style.css
+++ b/style.css
@@ -525,6 +525,18 @@ color: #4999c1;
 	margin-top: 80px;
 }
 
+/* video class using fitvids.js */
+.fluid-width-video-wrapper{
+	margin: 40px 0px;
+}
+
+/*Images*/
+.single-image{
+	margin: 40px 0px;
+	width: 100%;
+	height: auto;
+}
+
 /* --------------------Blog Posts ---------------------- */ 
 
 .blog-intro-section{
