Changing broken links

--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ a:active {text-decoration: none;}
 }
 
 #logo {
-  background: url(http://ec2-54-235-78-67.compute-1.amazonaws.com/wp-content/uploads/2015/12/logo12012015v1.0.svg);  
+  background: url(http://www.sanchezmauricio.com/wp-content/uploads/2015/12/logo12012015v1.0.svg);  
   float: left;
 }
 
