Centered font and added right colors

--- a/mauricio_bootstrap/css/bootstrap.css
+++ b/mauricio_bootstrap/css/bootstrap.css
@@ -4189,11 +4189,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     border-radius: 4px;
   }
 }
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
   .navbar-header {
     float: left;
   }
-}
+}*/
 .navbar-collapse {
   padding-right: 15px;
   padding-left: 15px;
