--- a/style.css
+++ b/style.css
@@ -353,6 +353,10 @@ color: #4999c1;
     color: white;
 }
 
+.navbar-default .navbar-nav > li > a {
+    color: white;
+}
+
 .current_page_item > a{
 	border-bottom: 2px solid rgba(255, 255, 255, 1);
 	border-color: #b6d450;
@@ -361,9 +365,18 @@ color: #4999c1;
 
 /*
 /
-Hambuerguer Menu
+Hamburguer Menu
 / 
 */
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #1f1f1f;
+}
+
+.navbar-default .navbar-toggle, .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus  {
+    border-color: transparent;
+    background: transparent;
+}
 .navbar-toggle {
   display: block;
   float: left;
@@ -373,39 +386,21 @@ Hambuerguer Menu
   color: #1f1f1f;
 }
 
-.navbar-collapse.collapse {
-  display: none!important;
-  width: 0;
-}
-.navbar-nav {
-  float: none!important;
-}
 .navbar-nav>li {
   float: none;
 }
-.navbar-collapse.collapse.in{
-/*  top: 50px;
-  bottom: 0;
-  left: 0;
-  width: 200px;
-  position: fixed;
-  overflow: hidden;
-  transition: width .4s;*/
-
-}
-
-
 
 .left-slide{
 	width: 0;
-	top:50px;
+	top:48px;
 	bottom:0;
-	left:0;
-	
+	left:0;	
 	position:fixed;
 	overflow:hidden;
 	transition:width .4s;
-	background: black;
+	background: #4b4e53;
+	border-top: 1px solid transparent;
+    border-color: #e7e7e7;
 
 }
 
