--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a:active {text-decoration: none;}
 
 /* ------------------ media query for our containers based on boostrap ------------------ */
 
-@media (min-width: 320px){
+@media screen and (min-width: 320px){
 	/* Project Thumnails */	
 	.item {
 		float: left;
@@ -61,16 +61,25 @@ a:active {text-decoration: none;}
 		height: 173px;
 	}
 	/* Top Nav Bar */
-	#logo-container {
+/*	#logo-container {
 	  margin-top: 16px;
 	  margin-left: 15px;
 	  width: 180px;
 	  height: 22px;
       background-size: 180px 22px !important;
-	}
+	}*/
 
 	.navbar div.navbar-header{
 		text-align: center;
+	}
+
+	.home-intro-section{
+		height: 400px;
+    	line-height: 400px;
+	}
+
+	.home-intro-section p {
+		font-size: 18px;
 	}
 
 	/* Blog Post */
@@ -118,7 +127,7 @@ a:active {text-decoration: none;}
 
 }
 
-@media (min-width: 640px){
+@media screen and (min-width: 640px){
 	/* Project Thumnails */	
 	.item {
 		float: left;
@@ -165,7 +174,7 @@ a:active {text-decoration: none;}
 	}
 }
 
-@media (min-width: 768px){
+@media screen and (min-width: 768px){
 	/* Project Thumnails */	
 	.item {
 		float: left;
@@ -200,9 +209,20 @@ a:active {text-decoration: none;}
 		font-size: 42px;
 	}
 
+	.home-intro-section{
+		height: 400px;
+    	line-height: 400px;
+	}
+
+	.home-intro-section p {
+		width: 500px;
+		font-size: 18px;
+
+	}
+
 }
 
-@media (min-width: 992px){
+@media screen and (min-width: 992px){
 	/* Project Thumnails */	
 	.item {
 		float: left;
@@ -243,7 +263,7 @@ a:active {text-decoration: none;}
 	}
 }
 
-@media (min-width: 1200px){
+@media screen and (min-width: 1200px){
 	/* Project Thumnails */
 	.item {
 		float: left;
@@ -254,15 +274,20 @@ a:active {text-decoration: none;}
 		width: 250px;
 		height: 160px;
 	}
-	#logo-container{
-/*		width: 240px;
-		height: 25px;
-  		background-size: 240px 25px !important;*/
-	}
 	/* Top Nav Bar */
 	.nav{
 		font-size: 15px;
 		margin-left: 10px;
+	}
+
+	.home-intro-section{
+		height: 500px;
+		line-height: 500px;
+	}
+
+	.home-intro-section{
+		width: 600px;
+		font-size: 18px;
 	}
 	/* Blog Post */
 	.blog-posts {
@@ -303,32 +328,6 @@ a:active {text-decoration: none;}
 	margin-right: auto;
 	margin-bottom: 0px;
 	background-color: white;
-}
-
-.home-intro-section {
-	height: 500px;
-	line-height: 500px;
-	text-align: center;
-}
-
-.home-intro-section p {
-	display: inline-block;
-	line-height: normal;
-	vertical-align: middle;
-	width: 600px;
-	font-size: 20px;
-	text-align: -webkit-auto;
-	color: #1f1f1f;
-}
-
-.home-intro-section p a {
-	text-decoration: underline;
-    color: black;
-    font-weight: 500;
-}
-
-.intro-section{
-	/*padding-left: 30px;*/
 }
 
 #title { 
@@ -423,6 +422,32 @@ Hamburguer Menu
 
 .left-slide.left{
 	width:200px;
+}
+
+.home-intro-section {
+	/*height: 500px;*/
+	/*line-height: 500px;*/
+	text-align: center;
+}
+
+.home-intro-section p {
+	display: inline-block;
+	line-height: normal;
+	vertical-align: middle;
+	/*width: 600px;*/
+	/*font-size: 20px;*/
+	text-align: -webkit-auto;
+	color: #1f1f1f;
+}
+
+.home-intro-section p a {
+	text-decoration: underline;
+    color: black;
+    font-weight: 500;
+}
+
+.intro-section{
+	/*padding-left: 30px;*/
 }
 
 /*---------------------This is for the body Landing page -----------------------*/ 
