--- a/style.css
+++ b/style.css
@@ -369,8 +369,9 @@ color: #4999c1;
     color: white;
 }
 
-.navbar-default .navbar-nav > li > a {
+.navbar-default .navbar-nav  li  a {
     color: white;
+    margin-left: 20px
 }
 
 .current_page_item > a{
