--- a/style.css
+++ b/style.css
@@ -22,9 +22,7 @@ This simple theme was built using the example Bootstrap theme "Basic marketing s
 html, body {padding:0; margin:0; height:100%;}
 
 body{
-	/*padding-top:60px;*/
-	font-family: 'Open Sans', sans-serif;
-	
+	font-family: 'Open Sans', sans-serif;	
 }
 /* main wrapper for website */
 .wrapper{
@@ -35,19 +33,12 @@ body{
 /* Some reset for our links*/
 a:link {text-decoration: none;} 
 a:visited {text-decoration: none;}  
-a:hover {text-decoration: none;}  
+a:hover {text-decoration: none !important; outline: 0;}  
 a:active {text-decoration: none;}
 
 button:focus {outline:0;}
 
-
 /*My CSS Starts here*/
-
-/*footer{
-
-	padding-bottom: 50px;
-
-}*/
 
 /* ------------------ media query for our containers based on boostrap ------------------ */
 
@@ -341,29 +332,6 @@ button:focus {outline:0;}
 	padding-bottom: 0px;
 }
 
-/*#title { 
-	float: left;
-	clear: left;
-	font-size: 10px;
-	margin: 0;
-	margin-top: -5px;
-}*/
-
-/*
-.header-mauricio{
-	border:none;
-	margin-bottom: 200px;
-	height: 30px;
-	padding-right: 15px;
-	top: 0;
-	background: white;
-}
-*/
-
-.thumb-title {
-	width: 100%;
-}
-
 /* Nav Bar Menu */
 a {
 text-decoration: none;
@@ -375,10 +343,10 @@ transition-duration: 0.3s;
 color: #4999c1;
 }
 
-.page-item-a:hover {
+/*.page-item-a:hover {
     border-bottom: 2px solid rgba(255, 255, 255, 1);
     color: white;
-}
+}*/
 
 .navbar-default .navbar-nav  li  a {
     color: white;
@@ -508,15 +476,9 @@ Hamburguer Menu
 
 /* when selected we change the look of the button */
 .filter-container.is-checked .filter-logo{
-	/*background: white !important; */
 	opacity: 1;
-	/*color: #101010;*/
-	/*font-weight: 700;*/
 }
 
-.project-sidebar-elements:visited{
-	
-}	
 
 /* filter menu for small screens */
 @media (max-width: 480px){
@@ -538,6 +500,32 @@ Hamburguer Menu
 
 .work-intro-section{
 	margin-top 50px;
+}
+
+.thumb-title {
+	font-family: 'Open Sans Condensed', sans-serif;
+	width: 100%;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #1f1f1f;
+    float: left;
+    font-size: 18px;
+    margin-top: 5px;
+
+}
+.thumb-title:hover{
+	color: #1f1f1f;
+}
+
+.img-thumb{
+	float: left;
+}
+
+span.project-year{
+	float: left;
+	font-style: italic;
+    font-weight: 100;
+    font-size: 13px;
 }
 
 /* -------------------- Blog Posts -------------------- */
@@ -577,11 +565,6 @@ Hamburguer Menu
 	padding: 10px 15px;	
 	text-transform: uppercase;
 }
-
-.blog-posts:hover {
-	/*background-color: white;*/
-}
-
 
 
 /* --------------------This is for the footer ---------------------- */ 
@@ -624,17 +607,6 @@ Hamburguer Menu
 	margin-top: 10px;
 	margin-bottom: 15px;	
 }
-
-.thumb-title {
-	/*color: #333333;*/
-	font-size: 16px;
-}
-
-.project-year {
-	/*color: #333333;*/
-	font-size: 16px;
-}
-
 
 #github{
 	margin: 0 5px;
