--- a/style.css
+++ b/style.css
@@ -590,13 +590,31 @@ span.project-year{
 	font-weight: 300;
 }
 
-#bottom-content{
-	margin-bottom: 0px;
-	position: relative;
-	text-align: center;
-	clear: both;
+footer p {
+	text-align: left;
+	color: white;
 	color: #f5f5f5;
+}
+footer .contact-p{	
+    padding-top: 100px;
+    margin-bottom: 0;
+    font-weight: 300;
+}
+
+.footer-email{
+	font-weight: 700;
+}
+
+#bottom-content{
+	text-transform: uppercase;
+	margin-top: 20px;
+	margin-bottom: 10px;
+	position: relative;
+	clear: both;
+	
 	padding-bottom: 5px;
+	font-weight: 300;
+	font-size: 10px;
 }
 
 .project {
@@ -628,11 +646,6 @@ span.project-year{
 #twitter{
 	margin: 0 5px;
 	display: inline-block;
-}
-
-footer .contact-p{
-	text-align: left;
-    padding-top: 100px;
 }
 
 /* --------------------General Posts ---------------------- */ 
