--- a/style.css
+++ b/style.css
@@ -607,10 +607,10 @@ footer .contact-p{
 
 #bottom-content{
 	text-transform: uppercase;
-	margin-top: 20px;
+	margin-top: 30px;
 	margin-bottom: 10px;
 	position: relative;
-	clear: both;
+	/*clear: both;*/
 	
 	padding-bottom: 5px;
 	font-weight: 300;
