--- a/style.css
+++ b/style.css
@@ -570,6 +570,7 @@ span.project-year{
 	width:100%;	
 	bottom:0;
 	max-height: 300px;
+	background-color: #1f1f1f;
 }
 
 .contact-images{
@@ -595,7 +596,7 @@ footer p {
 	color: white;
 	color: #f5f5f5;
 }
-footer .contact-p{	
+footer .others-title{	
     padding-top: 100px;
     margin-bottom: 0;
     font-weight: 300;
@@ -610,11 +611,22 @@ footer .contact-p{
 	margin-top: 30px;
 	margin-bottom: 10px;
 	position: relative;
-	/*clear: both;*/
-	
+	/*clear: both;*/	
 	padding-bottom: 5px;
 	font-weight: 300;
 	font-size: 10px;
+}
+
+#footer-mauricio .footer-column-container a{
+	float: left;
+}
+
+#footer-mauricio .footer-column-container a img{
+	margin: 0;
+	display: inline-block;
+	margin-right: 10px;
+	width: 35px;
+	height: auto;
 }
 
 .project {
@@ -622,18 +634,16 @@ footer .contact-p{
 	margin-bottom: 15px;	
 }
 
-#github{
+/*#github{
 	margin: 0 5px;
-	display: inline-block;
-	
+	display: inline-block;	
 }
 
 #github:hover, #linkedin:hover, #blog:hover, #twitter:hover{
-
 	-webkit-filter: brightness(0.5);
-}
+}*/
 
-#linkedin{
+/*#linkedin{
 	margin: 0 5px;
 	display: inline-block;
 }
@@ -646,7 +656,7 @@ footer .contact-p{
 #twitter{
 	margin: 0 5px;
 	display: inline-block;
-}
+}*/
 
 /* --------------------General Posts ---------------------- */ 
 
