Adding logic to add margin-top to navbar when logged in

--- a/style.css
+++ b/style.css
@@ -549,8 +549,9 @@ span.project-year{
 
 .jumbotron.single-jumbotron{
 	background-size: cover !important;
-	min-height: 100%;
-	width: auto;
+	min-height: 90%;
+	margin-top: 50px;
+
 }
 
 /* 
