Fixed about page. PIcture pending

--- a/style.css
+++ b/style.css
@@ -134,6 +134,10 @@ button:focus {outline:0;}
 		height: 50px;
 	}
 
+	.about-paragraph {
+		padding: 0 10px;
+	}
+
 
 }
 
@@ -186,6 +190,11 @@ button:focus {outline:0;}
 		font-size: 21px;
 		font-weight: 700;
 	}
+
+	/* about */
+	.about-paragraph {
+		padding: 0 20px;
+	}
 }
 
 @media screen and (min-width: 768px){
@@ -218,6 +227,9 @@ button:focus {outline:0;}
 	/*About*/
 	.about-title{
 		font-size: 42px;
+	}
+	.about-paragraph {
+		padding: 0 30px;
 	}
 	.contact-title{
 		font-size: 42px;
@@ -275,6 +287,11 @@ button:focus {outline:0;}
 /*	.project-sidebar-elements{
 		width: 120px;
 	}*/
+
+	/*about*/
+	.about-paragraph {
+		padding: 0 60px;
+	}
 }
 
 @media screen and (min-width: 1200px){
@@ -317,6 +334,10 @@ button:focus {outline:0;}
 /*	.filter-container{
 		width: 120px;
 	}*/
+
+	.about-paragraph {
+		padding: 0 100px;
+	}
 }
 
 #logo-container span {
