--- a/style.css
+++ b/style.css
@@ -866,11 +866,12 @@ footer .others-title{
 	margin-top: 40px;
 	padding-bottom: 240px;
 }
-#about-image{
-	max-width: 100%;
-    max-height: 100%;
-    margin-bottom: 40px;
-    margin-top: 40px;
+.about-jumbotron{
+	min-height: 90%;
+	margin-top: 50px;
+    background-size: contain !important;
+    background-position: center center !important;
+    background-repeat: no-repeat !important;
 }
 
 .about-paragraph{
