Fixing thumbs container class

--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ button:focus {outline:0;}
 
 	/* Blog Post */
 	.blog-posts {
-		width: 290px;
-		height: 380px;
+		/*width: 290px;*/
+		/*height: 380px;*/
 	}
 	.blog-thumb{
 		width: 290px;
@@ -157,9 +157,9 @@ button:focus {outline:0;}
 
 	/* Blog Post */
 	.blog-posts {
-		width: 500px;
-		height: 450px;
-		margin: 30px 0px;
+		/*width: 500px;*/
+		/*height: 450px;*/
+		/*margin: 30px 0px;*/
 	}
 	.blog-thumb{
 		width: 500px;
@@ -275,9 +275,9 @@ button:focus {outline:0;}
 	}
 	/* Blog Post */
 	.blog-posts {
-		width: 350px;
-		height: 400px;
-		margin: 30px 15px;
+		/*width: 350px;*/
+		/*height: 400px;*/
+		/*margin: 30px 15px;*/
 	}
 	.blog-thumb{
 		width: 350px;
@@ -322,8 +322,8 @@ button:focus {outline:0;}
 	}
 	/* Blog Post */
 	.blog-posts {
-		width: 250px;
-		height: 380px;
+		/*width: 250px;*/
+		/*height: 380px;*/
 	}
 
 	.blog-thumb{
@@ -466,8 +466,8 @@ Hamburguer Menu
 
 /*---------------------This is for the body Landing page -----------------------*/ 
 
-.grid, .single-content{
-	padding-bottom: 350px;
+.grid, .single-content, .grid-blog{
+	margin-bottom: 350px;
 }
 
 #sidebar{
@@ -607,8 +607,8 @@ span.project-year{
 }
 
 .blog-container{
-	padding-top: 40px;
-	padding-bottom: 240px;
+	/*padding-top: 40px;*/
+	/*margin-bottom: 350px;*/
 }
 
 .blog-posts{
