--- a/style.css
+++ b/style.css
@@ -835,6 +835,18 @@ footer .others-title{
 	margin-top: 80px;
 }
 
+.single-content p{
+    line-height: normal;
+    color: #1f1f1f;
+    letter-spacing: 1.5px;
+    font-weight: 100;
+}
+
+.single-content a{
+    color: black;
+    text-decoration: underline;
+}
+
 /* video class using fitvids.js */
 .fluid-width-video-wrapper{
 	margin: 40px 0px;
