--- a/style.css
+++ b/style.css
@@ -835,14 +835,14 @@ footer .others-title{
 	margin-top: 80px;
 }
 
-.single-content p{
+.single-content p, .about-paragraph{
     line-height: normal;
     color: #1f1f1f;
     letter-spacing: 1.5px;
     font-weight: 100;
 }
 
-.single-content a{
+.single-content a, .about-paragraph a{
     color: black;
     text-decoration: underline;
 }
