--- a/style.css
+++ b/style.css
@@ -686,7 +686,7 @@ span.project-year{
 
 .blog-container{
 	/*padding-top: 40px;*/
-	/*margin-bottom: 350px;*/
+	padding-bottom: 350px;
 }
 
 .blog-posts{
