--- a/style.css
+++ b/style.css
@@ -173,15 +173,15 @@ button:focus {outline:0;}
 	}
 
 	/* Blog Post */
-	.blog-posts {
+	/* .blog-posts { */
 		/*width: 500px;*/
 		/*height: 450px;*/
 		/*margin: 30px 0px;*/
-	}
+	/* }
 	.blog-thumb{
 		width: 500px;
 		height: 320px;
-	}
+	} */
 
 	/* Tab filters */
 	.filter-container{
@@ -308,15 +308,15 @@ button:focus {outline:0;}
 		/*margin-left: 5px;		*/
 	}
 	/* Blog Post */
-	.blog-posts {
+	/* .blog-posts { */
 		/*width: 350px;*/
 		/*height: 400px;*/
 		/*margin: 30px 15px;*/
-	}
+	/* }
 	.blog-thumb{
 		width: 350px;
 		height: 224px;
-	}
+	} */
 	/* Tab filters */
 /*	.project-sidebar-elements{
 		width: 120px;
@@ -355,15 +355,15 @@ button:focus {outline:0;}
 		font-size: 18px;
 	}
 	/* Blog Post */
-	.blog-posts {
+	/* .blog-posts { */
 		/*width: 250px;*/
 		/*height: 380px;*/
-	}
+	/* } */
 
-	.blog-thumb{
+	/* .blog-thumb{
 		width: 250px;
 		height: 160px;
-	}
+	} */
 	/* Tab filters */
 /*	.filter-container{
 		width: 120px;
@@ -621,11 +621,25 @@ Hamburguer Menu
 	float: left;
 }
 
-span.project-year{
-	float: left;
+p.blog-title-thumb{
+	/* float: left;
 	font-style: italic;
     font-weight: 100;
-    font-size: 13px;
+	font-size: 13px; */
+	font-family: 'texgyreadventor', sans-serif;
+    font-size: 40px;
+    font-weight: normal;
+    color: #FFFFFF;
+    letter-spacing: 0.25px;
+    line-height: 1;
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+    /* z-index: 2; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    margin: 0;
 }
 
 /* 
@@ -683,15 +697,17 @@ span.project-year{
     color: black;
     font-weight: 500;
 }
-
+/* 
 .blog-container{
-	/*padding-top: 40px;*/
-	/*margin-bottom: 350px;*/
-}
+	
+} */
 
 .blog-posts{
 	float: left;
-	background-color: #f5f5f5;
+	/* background-color: #f5f5f5; */
+	margin-bottom: 350px;
+	width:100%;
+	min-height: 150px;
 }
 
 .blog-title{
@@ -718,6 +734,27 @@ span.project-year{
 	font-weight: 600;
 	padding: 10px 15px;	
 	text-transform: uppercase;
+}
+
+.blog-post-thumb{
+	background-image: url(http://www.sanchezmauricio.com/wp-content/uploads/2016/03/cron.jpg);
+    /* background: inherit; */
+    background-size: cover;
+    background-position: center;
+    content: '';
+    height: 100%;
+    left: 10%;
+    opacity: 1;
+    position: absolute;
+    /* top: 0px; */
+    width: 80%;
+    /* z-index: 9; */
+    height: 150px;
+    /* bottom: 0; */
+    /* background-color: black; */
+    /* margin: 0 auto; */
+    /* padding: 0 0px; */
+    filter: blur(2px);
 }
 
 
